# pumi-pic

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  doConfig.sh  env-gitrm-aimos.sh  envBlockadeCuda.sh
particle_structs/src/: particle_structure.hpp  ps_for.hpp
particle_structs/src/csr/: CSR.hpp
particle_structs/src/scs/: SellCSigma.h
particle_structs/test/: test_structure.cpp  testing.cmake
performance_tests/: CMakeLists.txt  combo_format.py  compare.sh  dist_detection.cpp  memory_comparison.cpp  ps_combo.cpp  ps_pseudopush.cpp  ps_rebuild.cpp  test_combo.sh
scripts/: GITR_pisces_result_count.sh  README.md  convertText2Netcdfxx.cpp  gitr_class_all_edit.py  history_norm.py  makeParticleSource_fromIndex.sh  make_vtk_allptcls2_unordered-list.sh  make_vtk_nc_2dmesh.cpp  make_vtk_nc_compare.cpp  make_vtk_points.cpp  mesh_generation.txt  runBoris.sh  script_get_num.sh
src/: CMakeLists.txt  GITRm.cpp  GitrmBoundary.cpp  GitrmBoundary.hpp  GitrmCoulombCollision.hpp  GitrmCrossDiffusion.hpp  GitrmDistance2Bdry.hpp  GitrmInput.cpp  GitrmInput.hpp  GitrmInputOutput.cpp  GitrmInputOutput.hpp  GitrmIonizeRecombine.cpp  GitrmIonizeRecombine.hpp  GitrmMesh.cpp  GitrmMesh.hpp  GitrmParticles.cpp  GitrmParticles.hpp  GitrmPush.hpp  GitrmSpectroscopy.cpp  GitrmSpectroscopy.hpp  GitrmSurfaceModel.cpp  GitrmSurfaceModel.hpp  GitrmThermalForce.hpp
test/: CMakeLists.txt  testing.cmake
